--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@splidejs/splide": "^2.4.21",
     "vue": "^3.2.6"
   },
   "devDependencies": {
